# OpenSensorium

./: .env.example  .gitignore  PRD.md  README.md  config.example.yaml  main.py  pyproject.toml  requirements.txt
opensensorium/: __init__.py  __main__.py  agent.py
opensensorium/audio/: __init__.py  sensor.py
opensensorium/llm/: __init__.py  backbone.py
opensensorium/memory/: __init__.py  store.py
opensensorium/vision/: __init__.py  sensor.py
src/opensensorium/: __init__.py  config.py  logging.py  schemas.py
src/opensensorium/bus/: __init__.py
src/opensensorium/channel/: __init__.py
src/opensensorium/core/: __init__.py
src/opensensorium/delegate/: __init__.py
src/opensensorium/effector/: __init__.py
src/opensensorium/endpoint/: __init__.py
src/opensensorium/inference/: __init__.py
src/opensensorium/memory/: __init__.py
src/opensensorium/safety/: __init__.py
src/opensensorium/scheduler/: __init__.py
src/opensensorium/skills/: __init__.py
tasks/: README.md  T00-bootstrap-skeleton.md  T01-deploy-minicpm-o-service.md  T02-deploy-joyai-vl-service.md  T03-model-adapter-framework.md  T04-perception-event-bus.md  T05-windows-screen-capture.md  T06-anti-echo-presentation-surface.md  T07-single-stream-source-switching.md  T08-local-presentation-ui.md  T09-cognition-core-vision-loop.md  T10-audio-capture-vad.md  T11-tts-output-barge-in.md  T12-continuous-perception-salience.md  T13-keyboard-mouse-effector.md  T14-safety-layer.md  T15-action-grounding-verification.md  T16-cognitive-delegate.md  T17-layered-memory.md  T18-scheduler.md  T19-task-goal-resume.md  T20-skills-registry.md  T21-proactivity-triggers-arbitration.md  T22-feishu-channel.md  T23-cloud-pc-effector.md  T24-future-physical-world.md  T25-ci-mock-inference-harness.md  T26-macos-linux-endpoints.md
tests/: __init__.py  test_agent.py  test_audio.py  test_llm.py  test_memory.py  test_schemas.py  test_vision.py
