[project]
name = "opensensorium"
version = "0.0.1"
description = "以视觉为主、多模态并行的持续感知—主动行动通用智能体（见 PRD.md）"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenSensorium" }]

# 说明：这里只声明骨架期最小依赖。各任务（tasks/）会按需追加自己的依赖，
# 推理服务端（services/）依赖单独管理，不混入 Core。
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",        # 视频帧处理（JPEG / 下采样）
    "pydantic>=2.0",       # 事件 / 意图 / 能力协商的结构化模型
    "pyyaml>=6.0",         # 配置
    "loguru>=0.7",         # 结构化日志（可观测 NFR）
]

[project.optional-dependencies]
# Windows 桌面 Endpoint（采集 + 键鼠注入 + 防回音）
endpoint-windows = [
    "mss>=9.0",            # 屏幕采集
    "opencv-python>=4.9",  # 摄像头 / 帧处理
    "pywin32>=306",        # WDA_EXCLUDEFROMCAPTURE / SendInput
    "sounddevice>=0.4",    # 麦克风
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opensensorium"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
