[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensensorium"
version = "0.1.0"
description = "A human/animal-like AI agent grounded in vision and voice as first principles"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    # LLM backbone (vision + language)
    "openai>=1.30.0",
    # Computer vision — camera capture
    "opencv-python>=4.9.0",
    # Audio capture
    "pyaudio>=0.2.14",
    # Audio playback helpers
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    # Async utilities
    "anyio>=4.3.0",
    # Configuration
    "python-dotenv>=1.0.1",
    # Numpy (for audio / image buffers)
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
opensensorium = "opensensorium.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["opensensorium*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
